add fast charge
Signed-off-by: kn06497 <kn06497@hotmail.com>

--- a/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
@@ -3446,6 +3446,9 @@ CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
+# Misc
+CONFIG_FORCE_FAST_CHARGE=y
+
 #
 # Samsung Debugging Feature
 #
