--- a/arch/arm/configs/msm8916_fortuna3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_fortuna3g_eur_defconfig
@@ -3317,6 +3317,9 @@ CONFIG_MSM_IOMMU_V1=y
 # CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
 # CONFIG_MSM_IOMMU_TLBINVAL_ON_MAP is not set
 
+# Misc
+CONFIG_FORCE_FAST_CHARGE=y
+
 #
 # Remoteproc drivers
 #
