Update zram and zsmalloc up-to 3.17 kernel changes
Signed-off-by: Nothing-Dev <alfredomartinez_1423@hotmail.com>

--- a/drivers/block/Kconfig
+++ b/drivers/block/Kconfig
@@ -102,6 +102,7 @@ config PARIDE
 	  etc.).
 
 source "drivers/block/paride/Kconfig"
+source "drivers/block/zram/Kconfig"
 
 source "drivers/block/mtip32xx/Kconfig"
 
