--- a/arch/arm/configs/maxi_fortuna3g_defconfig
+++ b/arch/arm/configs/maxi_fortuna3g_defconfig
@@ -45,7 +45,7 @@ CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 # CONFIG_KERNEL_LZ4 is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -521,11 +521,15 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
+# CONFIG_FRONTSWAP is not set
 CONFIG_MEMORY_HOLE_CARVEOUT=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
 # CONFIG_ZPOOL is not set
-# CONFIG_ZSMALLOC is not set
+CONFIG_ZSMALLOC=y
+# CONFIG_PGTABLE_MAPPING is not set
+# CONFIG_SWAP_ENABLE_READAHEAD is not set
+# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_ENABLE_VMALLOC_SAVING=y
 # CONFIG_NO_VM_RECLAIM is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -1180,6 +1184,9 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
@@ -3233,6 +3240,8 @@ CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
+CONFIG_RUNTIME_COMPCACHE=y
+CONFIG_KSWAPD_NOSWAP=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 CONFIG_ION_MSM=y
@@ -4001,6 +4010,7 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
