--- a/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
@@ -3484,7 +3484,7 @@ CONFIG_BATTERY_SAMSUNG=y
 CONFIG_BATTERY_SAMSUNG_DATA_FILE="fortuna_battery_data.h"
 CONFIG_SLOW_CHARGING_CURRENT_STANDARD=1000
 # CONFIG_CHARGING_VZWCONCEPT is not set
-CONFIG_BATTERY_SWELLING=y
+# CONFIG_BATTERY_SWELLING is not set
 # CONFIG_BATTERY_SWELLING_SELF_DISCHARGING is not set
 CONFIG_FUELGAUGE_RT5033=y
 # CONFIG_FUELGAUGE_SM5703 is not set
