--- a/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
+++ b/arch/arm/configs/msm8916_fortunave3g_eur_defconfig
@@ -2288,7 +2288,7 @@ CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_IMX134 is not set
-CONFIG_CAMERA_SYSFS_V2=y
+# CONFIG_CAMERA_SYSFS_V2 is not set
 # CONFIG_IMX132 is not set
 # CONFIG_IMX219 is not set
 # CONFIG_OV9724 is not set
